# MyFolder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  command.cpp  command.h  fat12format.cpp  fat12format.h  folderwatcher.cpp  folderwatcher.h  main.cpp  ocr.cpp  ocr.h  operation.qml  pom.xml  root@123.57.28.236
SharePath/: test
src/main/java/xyz/suonan/myfolder_sever/: MyFolderSeverApplication.java
src/main/java/xyz/suonan/myfolder_sever/BaseMessage/: BaseMessage.java  WebSocketBaseMessage.java
src/main/java/xyz/suonan/myfolder_sever/Config/: CorsConfig.java  FilterConfig.java  JwtProperties.java  WebConfig.java  WebSocketConfig.java
src/main/java/xyz/suonan/myfolder_sever/Controller/: DirectoryHttpController.java  FileHttpController.java  TimeController.java  UserController.java  WebSocketController.java
src/main/java/xyz/suonan/myfolder_sever/Dao/: DirectoryFileDao.java  DirectoryInfoDao.java  FileInfoDao.java  UserDao.java
src/main/java/xyz/suonan/myfolder_sever/Deserializer/: HexToByteArrayDeserializer.java
src/main/java/xyz/suonan/myfolder_sever/Error/: ErrorType.java  SqlError.java
src/main/java/xyz/suonan/myfolder_sever/Filter/: CorsFilter.java  TokenFilter.java
src/main/java/xyz/suonan/myfolder_sever/Handler/: DeviceHandler.java
src/main/java/xyz/suonan/myfolder_sever/Interceptor/: DeviceInterceptor.java
src/main/java/xyz/suonan/myfolder_sever/MyObject/: Device.java  Directory.java  FileBase.java  FileBaseItem.java  FileInfo.java  FileInfoResponse.java  FileInfoUpload.java  FolderFileWriteTask.java  MyFile.java  WriteTask.java
src/main/java/xyz/suonan/myfolder_sever/MyObject/Device/: Device.java  DeviceInfo.java
src/main/java/xyz/suonan/myfolder_sever/MyObject/Item/: DirectoryItem.java  FileBaseItem.java  FileInfoItem.java
src/main/java/xyz/suonan/myfolder_sever/Service/: DirectoryFileService.java  DirectoryInfoService.java  FileInfoService.java  UploadRecoveryManager.java  UserService.java
src/main/java/xyz/suonan/myfolder_sever/Service/Checker/: ChunksCheck.java  FileChunksCheck.java
src/main/java/xyz/suonan/myfolder_sever/Service/Executor/: FileTaskExecutor.java
src/main/java/xyz/suonan/myfolder_sever/Service/Redis/: FileChunkBitmapService.java  FileChunkSha256Service.java  FileChunkTaskCountService.java  FileChunksCountService.java  FileCountService.java  FolderFileAbsoluteService.java  FolderFilesStatusService.java
src/main/java/xyz/suonan/myfolder_sever/Service/Session/: SessionRepository.java
src/main/java/xyz/suonan/myfolder_sever/Service/Timer/: PartTimer.java  Time.java  Timer.java  TotalTimer.java
src/main/java/xyz/suonan/myfolder_sever/Service/Writer/: ChunkWriteHanler.java  FileChunkWriter.java
src/main/java/xyz/suonan/myfolder_sever/Utils/: FileHashUtil.java  FileZipService.java  IdGen.java  JwtGen.java  WrapFileBaseItem.java
src/main/java/xyz/suonan/myfolder_sever/pojo/: DirectoryInfo.java  User.java
src/main/resources/: application-development.properties  application-formal.properties  application.properties
src/main/resources/static/: index.html
src/main/resources/static/assets/: FileView-BekAB_I8.css  FileView-UzIBk_mk.js  LoginView-C7pwxbLH.css  LoginView-DhAcInrW.js  RegisterView-CthDuvuu.js  RegisterView-DyBdIzzq.css  _plugin-vue_export-helper-DoCpYK5i.js  index-DbbiUtAi.js  index-_vZVzdzn.css
src/test/java/xyz/suonan.myfolder_sever/: Ziptest.java
src/test/java/xyz/suonan/myfolder_sever/: MyFolderSeverApplicationTests.java
